[package]
name = "typed_db"
version = "0.1.1"
edition = "2024"

[dependencies]
chrono = "0.4.*"
rusqlite = { version = "0.*", features = ["chrono"] }
typed_db_derive = { path = "./typed_db_derive" }

[dev-dependencies]
criterion = { version = "0.*", features = ["html_reports"] }

[[bench]]
name = "benches"
path = "src/benches.rs"
harness = false
